--- a/src/main/resources/com/fitness/style/text_field.css
+++ b/src/main/resources/com/fitness/style/text_field.css
@@ -3,4 +3,11 @@
     -fx-border-color: #367bf5;
     -fx-border-radius: 5px;
     -fx-background-color: transparent;
+    -fx-font-size: 30px;
+}
+.textField_error {
+    -fx-border-width: 1px;
+    -fx-border-color: #f53636;
+    -fx-border-radius: 5px;
+    -fx-background-color: transparent;
 }
