--- a/src/main/resources/com/fitness/fragment/customer/edit_customer.fxml
+++ b/src/main/resources/com/fitness/fragment/customer/edit_customer.fxml
@@ -36,20 +36,20 @@
          </GridPane.margin>
       </Label>
       <Separator GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
-      <Label styleClass="paragraph" text="Քարտի համար" GridPane.rowIndex="2" />
-      <Label styleClass="paragraph" text="Անուն" GridPane.rowIndex="3" />
-      <Label styleClass="paragraph" text="Ազգանուն" GridPane.rowIndex="4" />
-      <Label styleClass="paragraph" text="Հեռախոս" GridPane.rowIndex="5" />
-      <Label styleClass="paragraph" text="Հեռախոս 2-րդ (ոչ պարտադիր)" GridPane.rowIndex="6" />
-      <Label styleClass="paragraph" text="Հասցե" GridPane.rowIndex="7" />
-      <Label styleClass="paragraph" text="Աբոնեմենտ" GridPane.rowIndex="9" />
-      <TextField fx:id="cardTextField" styleClass="textField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <Label styleClass="paragraph" text="Քարտի համար *" GridPane.rowIndex="2" />
+      <Label styleClass="paragraph" text="Անուն *" GridPane.rowIndex="3" />
+      <Label styleClass="paragraph" text="Ազգանուն *" GridPane.rowIndex="4" />
+      <Label styleClass="paragraph" text="Հեռախոս *" GridPane.rowIndex="5" />
+      <Label styleClass="paragraph" text="Հեռախոս 2-րդ" GridPane.rowIndex="6" />
+      <Label styleClass="paragraph" text="Հասցե *" GridPane.rowIndex="7" />
+      <Label styleClass="paragraph" text="Աբոնեմենտ *" GridPane.rowIndex="9" />
+      <TextField fx:id="cardTextField" editable="false" styleClass="textField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       <TextField fx:id="nameTextField" styleClass="textField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
       <TextField fx:id="surnameTextField" styleClass="textField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
       <TextField fx:id="phoneTextField" styleClass="textField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
       <TextField fx:id="phone2TextField" styleClass="textField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
       <TextField fx:id="addressTextField" styleClass="textField" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-      <ComboBox fx:id="subscriptionComboBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="combo-box" GridPane.columnIndex="1" GridPane.rowIndex="9">
+      <ComboBox fx:id="subscriptionComboBox" maxWidth="1.7976931348623157E308" styleClass="combo-box" GridPane.columnIndex="1" GridPane.rowIndex="9">
          <GridPane.margin>
             <Insets left="50.0" right="50.0" />
          </GridPane.margin></ComboBox>
