added some features

--- a/src/main/resources/com/fitness/fragment/service/service.fxml
+++ b/src/main/resources/com/fitness/fragment/service/service.fxml
@@ -3,6 +3,7 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
@@ -16,10 +17,9 @@
    <rowConstraints>
       <RowConstraints valignment="BOTTOM" />
       <RowConstraints maxHeight="400.0" minHeight="400.0" prefHeight="400.0" valignment="BOTTOM" />
-      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
       <RowConstraints valignment="TOP" vgrow="ALWAYS" />
       <RowConstraints valignment="BOTTOM" vgrow="ALWAYS" />
-      <RowConstraints valignment="TOP" />
+      <RowConstraints valignment="BOTTOM" vgrow="ALWAYS" />
       <RowConstraints valignment="TOP" />
       <RowConstraints valignment="TOP" />
    </rowConstraints>
@@ -32,37 +32,29 @@
       <Label styleClass="header1" stylesheets="@../../style/labels.css" text="Ծառայություններ" GridPane.columnSpan="2147483647" GridPane.halignment="LEFT" GridPane.valignment="BOTTOM" />
       <ScrollPane hbarPolicy="NEVER" maxHeight="400.0" maxWidth="700.0" minHeight="400.0" minViewportHeight="100.0" minWidth="700.0" prefHeight="400.0" prefViewportHeight="200.0" prefWidth="700.0" style="-fx-background-color: transparent;" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" GridPane.vgrow="ALWAYS">
          <content>
-            <GridPane fx:id="servicesGridPane" alignment="CENTER" maxHeight="400.0" maxWidth="700.0" minHeight="400.0" minWidth="700.0" prefHeight="400.0" prefWidth="700.0">
-              <columnConstraints>
-                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" />
-                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" />
-                  <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
-                  <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
-              </rowConstraints>
-               <children>
-                  <Button mnemonicParsing="false" styleClass="service_box_selected" text="Box" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                  <Button mnemonicParsing="false" styleClass="service_box" text="Մարզում" GridPane.columnIndex="1" />
-                  <Button mnemonicParsing="false" styleClass="service_box" text="Մերսում" GridPane.columnIndex="2" />
-                  <Button mnemonicParsing="false" styleClass="service_box" text="Բոքս" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" styleClass="service_box" text="Մարզում" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Button mnemonicParsing="false" styleClass="service_box" text="Մերսում" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-               </children>
+            <GridPane fx:id="servicesGridPane" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="700.0" minWidth="700.0" prefWidth="700.0">
+<!--              <columnConstraints>-->
+<!--                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" />-->
+<!--                <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" />-->
+<!--                  <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" />-->
+<!--              </columnConstraints>-->
+<!--              <rowConstraints>-->
+<!--                  <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" valignment="CENTER" vgrow="ALWAYS" />-->
+<!--              </rowConstraints>-->
             </GridPane>
          </content>
       </ScrollPane>
-      <Separator prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
+      <Separator prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets top="10.0" />
          </GridPane.margin>
       </Separator>
-      <GridPane GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+      <GridPane GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" />
+          <ColumnConstraints hgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints vgrow="SOMETIMES" />
@@ -73,29 +65,34 @@
                   <Font size="22.0" />
                </font>
             </Button>
-            <Button fx:id="addButton" contentDisplay="CENTER" mnemonicParsing="false" styleClass="primary" text="Ավելացնել" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+            <Button fx:id="addPositionButton" contentDisplay="CENTER" mnemonicParsing="false" styleClass="primary" text="Ավելացնել հաստիք" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font size="22.0" />
                </font>
             </Button>
-            <Button fx:id="deleteButton" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" styleClass="secondary" text="Ջնջել" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
+            <Button fx:id="deleteButton" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" styleClass="secondary" text="Ջնջել" textAlignment="CENTER" GridPane.columnIndex="3" GridPane.halignment="RIGHT">
+               <font>
+                  <Font size="22.0" />
+               </font>
+            </Button>
+            <Button fx:id="addServiceButton" contentDisplay="CENTER" mnemonicParsing="false" styleClass="primary" text="Ավելացնել ծառայություն" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font size="22.0" />
                </font>
             </Button>
          </children>
       </GridPane>
-      <Label styleClass="paragraph" text="Անվանում" GridPane.halignment="LEFT" GridPane.rowIndex="4">
+      <Label styleClass="paragraph" text="Ծառայություն" GridPane.halignment="LEFT" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets bottom="5.0" />
          </GridPane.margin>
       </Label>
-      <Label styleClass="paragraph" text="Մեկ ծառայության գին (դրամ)" GridPane.halignment="LEFT" GridPane.rowIndex="7">
+      <Label styleClass="paragraph" text="Մեկ ծառայության գին (դրամ)" GridPane.halignment="LEFT" GridPane.rowIndex="5">
          <GridPane.margin>
             <Insets top="5.0" />
          </GridPane.margin>
       </Label>
-      <TextField fx:id="nameTextField" alignment="CENTER_RIGHT" styleClass="textField" text="Box" GridPane.columnIndex="2" GridPane.rowIndex="4">
+      <TextField fx:id="serviceNameTextField" alignment="CENTER_RIGHT" styleClass="textField" text="Բոքս" GridPane.columnIndex="2" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets bottom="5.0" />
          </GridPane.margin>
@@ -103,18 +100,21 @@
             <Font size="17.0" />
          </font>
       </TextField>
-      <TextField fx:id="priceTextField" alignment="CENTER_RIGHT" styleClass="textField" text="2000" GridPane.columnIndex="2" GridPane.rowIndex="7">
+      <TextField fx:id="priceTextField" alignment="CENTER_RIGHT" styleClass="textField" text="2000" GridPane.columnIndex="2" GridPane.rowIndex="5">
          <GridPane.margin>
-            <Insets top="5.0" />
+            <Insets bottom="5.0" top="5.0" />
          </GridPane.margin>
          <font>
             <Font size="17.0" />
          </font>
       </TextField>
+      <Label styleClass="paragraph" text="Հաստիք" GridPane.halignment="LEFT" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
+      <ComboBox fx:id="positionComboBox" styleClass="combo-box" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
    </children>
    <stylesheets>
       <URL value="@../../style/button.css" />
       <URL value="@../../style/labels.css" />
       <URL value="@../../style/text_field.css" />
+      <URL value="@../../style/combo_box.css" />
    </stylesheets>
 </fx:root>
