--- a/src/main/resources/com/fitness/fragment/position/position.fxml
+++ b/src/main/resources/com/fitness/fragment/position/position.fxml
@@ -3,7 +3,6 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
@@ -19,8 +18,6 @@
       <RowConstraints maxHeight="300.0" minHeight="300.0" prefHeight="300.0" valignment="BOTTOM" />
       <RowConstraints valignment="TOP" vgrow="ALWAYS" />
       <RowConstraints valignment="BOTTOM" vgrow="ALWAYS" />
-      <RowConstraints valignment="BOTTOM" vgrow="ALWAYS" />
-      <RowConstraints valignment="TOP" />
       <RowConstraints valignment="TOP" />
    </rowConstraints>
    <columnConstraints>
@@ -29,8 +26,8 @@
       <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" />
    </columnConstraints>
    <children>
-      <Label styleClass="header1" stylesheets="@../../style/labels.css" text="Ծառայություններ" GridPane.columnSpan="2147483647" GridPane.halignment="LEFT" GridPane.valignment="BOTTOM" />
-      <ScrollPane fx:id="servicesScrollPane" hbarPolicy="NEVER" maxHeight="300.0" maxWidth="800.0" minHeight="300.0" minViewportHeight="100.0" minWidth="800.0" prefHeight="300.0" prefViewportHeight="200.0" prefWidth="800.0" style="-fx-background-color: transparent;" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" GridPane.vgrow="ALWAYS">
+      <Label styleClass="header1" stylesheets="@../../style/labels.css" text="Հաստիքներ" GridPane.columnSpan="2147483647" GridPane.halignment="LEFT" GridPane.valignment="BOTTOM" />
+      <ScrollPane fx:id="positionScrollPane" hbarPolicy="NEVER" maxHeight="300.0" maxWidth="800.0" minHeight="300.0" minViewportHeight="100.0" minWidth="800.0" prefHeight="300.0" prefViewportHeight="200.0" prefWidth="800.0" style="-fx-background-color: transparent;" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" GridPane.vgrow="ALWAYS">
          <content>
             <GridPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="800.0" minWidth="800.0" prefWidth="800.0" style="-fx-vgap: 20px;">
                <rowConstraints>
@@ -43,7 +40,7 @@
             <Insets top="10.0" />
          </GridPane.margin>
       </Separator>
-      <GridPane GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
+      <GridPane GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" />
             <ColumnConstraints hgrow="SOMETIMES" />
@@ -70,17 +67,12 @@
             </Button>
          </children>
       </GridPane>
-      <Label styleClass="paragraph" text="Ծառայություն" GridPane.halignment="LEFT" GridPane.rowIndex="3">
+      <Label styleClass="paragraph" text="Հաստիք" GridPane.halignment="LEFT" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets bottom="5.0" />
          </GridPane.margin>
       </Label>
-      <Label styleClass="paragraph" text="Մեկ ծառայության գին (դրամ)" GridPane.halignment="LEFT" GridPane.rowIndex="5">
-         <GridPane.margin>
-            <Insets top="5.0" />
-         </GridPane.margin>
-      </Label>
-      <TextField fx:id="serviceNameTextField" alignment="CENTER_RIGHT" styleClass="textField" GridPane.columnIndex="2" GridPane.rowIndex="3">
+      <TextField fx:id="positionNameTextField" alignment="CENTER_RIGHT" styleClass="textField" GridPane.columnIndex="2" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets bottom="5.0" />
          </GridPane.margin>
@@ -88,16 +80,6 @@
             <Font size="17.0" />
          </font>
       </TextField>
-      <TextField fx:id="priceTextField" alignment="CENTER_RIGHT" styleClass="textField" GridPane.columnIndex="2" GridPane.rowIndex="5">
-         <GridPane.margin>
-            <Insets bottom="5.0" top="5.0" />
-         </GridPane.margin>
-         <font>
-            <Font size="17.0" />
-         </font>
-      </TextField>
-      <Label styleClass="paragraph" text="Հաստիք" GridPane.halignment="LEFT" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
-      <ComboBox fx:id="positionComboBox" styleClass="combo-box" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
    </children>
    <stylesheets>
       <URL value="@../../style/button.css" />
