--- a/src/main/resources/com/fitness/style/button.css
+++ b/src/main/resources/com/fitness/style/button.css
@@ -40,8 +40,9 @@
 }
 
 .service_box {
-    -fx-pref-width: 150px;
-    -fx-pref-height: 150px;
+    /*-fx-pref-width: 150px;*/
+    /*-fx-pref-height: 150px;*/
+    -fx-padding: 20px;
     -fx-background-color: #FFFFFF;
     -fx-text-fill: #367bf5;
     -fx-background-radius: 20px;
@@ -50,5 +51,19 @@
     -fx-wrap-text: true;
 }
 .service_box_selected {
+    -fx-effect: dropshadow(three-pass-box, #367bf5cc, 10, 0, 0, 0);
+}
+.position_box {
+    /*-fx-pref-width: 150px;*/
+    /*-fx-pref-height: 150px;*/
+    -fx-padding: 20px;
+    -fx-background-color: #FFFFFF;
+    -fx-text-fill: #367bf5;
+    -fx-background-radius: 20px;
+    -fx-font-size: 20px;
+    -fx-cursor: hand;
+    -fx-wrap-text: true;
+}
+.position_box_selected {
     -fx-effect: dropshadow(three-pass-box, #367bf5cc, 10, 0, 0, 0);
 }
