added subscription page subscription add and update skeleton pages

--- a/src/main/resources/com/fitness/fragment/enter/with-card.fxml
+++ b/src/main/resources/com/fitness/fragment/enter/with-card.fxml
@@ -1,23 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
-
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<?import java.net.URL?>
 <fx:root minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #F3F3F3;" type="javafx.scene.layout.GridPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <columnConstraints>
       <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" />
@@ -38,7 +26,7 @@
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="ALWAYS" />
+      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
       <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
@@ -73,7 +61,7 @@
       </ComboBox>
       <Separator prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="4">
          <GridPane.margin>
-            <Insets bottom="10.0" top="10.0" />
+            <Insets bottom="5.0" top="5.0" />
          </GridPane.margin></Separator>
       <Label styleClass="header2" text="Հաճախորդի տվյալներ" GridPane.columnSpan="4" GridPane.rowIndex="5" />
       <Label styleClass="paragraph" text="Անուն Ազգանուն" GridPane.columnSpan="2" GridPane.rowIndex="6" />
@@ -83,17 +71,17 @@
       <Label styleClass="paragraph" text="Աբոնեմենտ" GridPane.columnSpan="2" GridPane.rowIndex="14" />
       <Label styleClass="paragraph" text="Վերջին այց" GridPane.columnSpan="2" GridPane.rowIndex="16" />
       <Label fx:id="fullNameLabel" styleClass="info" text="Անուն Ազգանուն" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
-      <Separator prefWidth="200.0" style="-fx-border-style: dashed; -fx-border-color: #888888;" GridPane.columnSpan="4" GridPane.rowIndex="7" />
+      <Separator prefWidth="200.0" style="-fx-border-style: dashed; -fx-border-color: #888888; -fx-border-width: 1px;" GridPane.columnSpan="4" GridPane.rowIndex="7" />
       <Label fx:id="phoneLabel" styleClass="info" text="098 10 10 10" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="8" />
-      <Separator prefWidth="200.0" style="-fx-border-style: dashed; -fx-border-color: #888888;" GridPane.columnSpan="4" GridPane.rowIndex="9" />
+      <Separator prefWidth="200.0" style="-fx-border-style: dashed; -fx-border-color: #888888; -fx-border-width: 1px;" GridPane.columnSpan="4" GridPane.rowIndex="9" />
       <Label fx:id="phone2Label" styleClass="info" text="-" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="10" />
-      <Separator prefWidth="200.0" style="-fx-border-style: dashed; -fx-border-color: #888888;" GridPane.columnSpan="4" GridPane.rowIndex="11" />
+      <Separator prefWidth="200.0" style="-fx-border-style: dashed; -fx-border-color: #888888; -fx-border-width: 1px;" GridPane.columnSpan="4" GridPane.rowIndex="11" />
       <Label fx:id="addressLabel" text="Հասցե" GridPane.columnIndex="3" GridPane.rowIndex="12" />
-      <Separator prefWidth="200.0" style="-fx-border-style: dashed; -fx-border-color: #888888;" GridPane.columnSpan="4" GridPane.rowIndex="13" />
+      <Separator prefWidth="200.0" style="-fx-border-style: dashed; -fx-border-color: #888888; -fx-border-width: 1px;" GridPane.columnSpan="4" GridPane.rowIndex="13" />
       <Label fx:id="subscriptionLabel" styleClass="info" text="Gold" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="14" />
-      <Separator prefWidth="200.0" style="-fx-border-style: dashed; -fx-border-color: #888888;" GridPane.columnSpan="4" GridPane.rowIndex="15" />
+      <Separator style="-fx-border-style: dashed; -fx-border-color: #888888; -fx-border-width: 1px;" GridPane.columnSpan="4" GridPane.rowIndex="15" />
       <Label fx:id="lastVisitLabel" styleClass="info" text="15-10-2021" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="16" />
-      <TableView fx:id="serviceTable" nodeOrientation="LEFT_TO_RIGHT" prefHeight="150.0" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="17" GridPane.valignment="CENTER">
+      <TableView fx:id="serviceTable" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="17" GridPane.valignment="CENTER">
         <columns>
           <TableColumn fx:id="serviceColumn" editable="false" prefWidth="620.0" text="Ծառայություն" />
           <TableColumn fx:id="quantityColumn" editable="false" prefWidth="120.0" text="Քանակ" />
