--- a/src/main/resources/com/fitness/style/button.css
+++ b/src/main/resources/com/fitness/style/button.css
@@ -50,12 +50,7 @@
     -fx-cursor: hand;
     -fx-wrap-text: true;
 }
-.service_box_selected {
-    -fx-effect: dropshadow(three-pass-box, #367bf5cc, 10, 0, 0, 0);
-}
 .position_box {
-    /*-fx-pref-width: 150px;*/
-    /*-fx-pref-height: 150px;*/
     -fx-padding: 20px;
     -fx-background-color: #FFFFFF;
     -fx-text-fill: #367bf5;
@@ -64,6 +59,14 @@
     -fx-cursor: hand;
     -fx-wrap-text: true;
 }
-.position_box_selected {
+.subscription_box {
+    -fx-min-width: 150px;
+    -fx-pref-height: 150px;
+    -fx-background-color: #FFFFFF;
+    -fx-background-radius: 20px;
+    -fx-cursor: hand;
+}
+
+.selected {
     -fx-effect: dropshadow(three-pass-box, #367bf5cc, 10, 0, 0, 0);
 }
