--- a/src/main/resources/com/fitness/fragment/subscription/edit_subscription.fxml
+++ b/src/main/resources/com/fitness/fragment/subscription/edit_subscription.fxml
@@ -1,22 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.*?>
 <?import java.net.URL?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+
 <fx:root type="javafx.scene.layout.GridPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <columnConstraints>
       <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" />
+      <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" />
    </columnConstraints>
    <rowConstraints>
-      <RowConstraints />
-      <RowConstraints valignment="TOP" vgrow="ALWAYS" />
-      <RowConstraints valignment="TOP" />
+      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
+      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
+      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
+      <RowConstraints valignment="CENTER" vgrow="ALWAYS" />
+      <RowConstraints maxHeight="1.7976931348623157E308" valignment="CENTER" vgrow="ALWAYS" />
    </rowConstraints>
    <children>
-      <Label styleClass="header1" text="Փոփոխել աբոնեմենտը" />
+      <Label styleClass="header1" text="Փոփոխել աբոնեմենտը" GridPane.columnSpan="2147483647" />
+      <Label styleClass="paragraph" text="Անուն" GridPane.rowIndex="1" />
+      <TextField fx:id="nameTextField" styleClass="textField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Label styleClass="paragraph" text="Արժեք" GridPane.rowIndex="2" />
+      <TextField fx:id="priceTextField" styleClass="textField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <GridPane GridPane.columnSpan="2147483647" GridPane.rowIndex="3">
+         <columnConstraints>
+            <ColumnConstraints maxWidth="1.7976931348623157E308" minWidth="-Infinity" />
+            <ColumnConstraints hgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints vgrow="SOMETIMES" />
+            <RowConstraints vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <TableView fx:id="subscriptionEmploymentTable" maxHeight="300.0" minHeight="100.0" prefHeight="100.0" GridPane.columnIndex="1" GridPane.columnSpan="2">
+               <columns>
+                  <TableColumn fx:id="employmentColumn" prefWidth="524.0" text="Ծառայություն" />
+                  <TableColumn fx:id="quantityColumn" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Քանակ" />
+               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+               <GridPane.margin>
+                  <Insets left="5.0" right="5.0" top="5.0" />
+               </GridPane.margin>
+            </TableView>
+            <ComboBox fx:id="employmentComboBox" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+            <TextField fx:id="quantityTextField" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" styleClass="textField" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </TextField>
+            <Button fx:id="addEmploymentButton" mnemonicParsing="false" styleClass="secondary" text="Ավելացնել" wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+            <Button fx:id="deleteEmploymentButton" mnemonicParsing="false" styleClass="secondary" text="Ջնջել" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+         </children>
+      </GridPane>
+      <Button fx:id="previousButton" mnemonicParsing="false" styleClass="secondary" text="Հետ" GridPane.rowIndex="4" />
+      <Button fx:id="editSubscriptionButton" mnemonicParsing="false" styleClass="primary" text="Փոփոխել" wrapText="true" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
    </children>
    <stylesheets>
       <URL value="@../../style/button.css" />
       <URL value="@../../style/labels.css" />
+      <URL value="@../../style/combo_box.css" />
+      <URL value="@../../style/text_field.css" />
    </stylesheets>
 </fx:root>
