--- a/src/main/resources/com/fitness/fragment/employment/employment.fxml
+++ b/src/main/resources/com/fitness/fragment/employment/employment.fxml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import java.net.URL?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
+
 <fx:root alignment="CENTER" type="javafx.scene.layout.GridPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <rowConstraints>
       <RowConstraints valignment="BOTTOM" />
       <RowConstraints maxHeight="300.0" minHeight="300.0" prefHeight="300.0" valignment="BOTTOM" />
       <RowConstraints valignment="TOP" vgrow="ALWAYS" />
-      <RowConstraints valignment="BOTTOM" vgrow="ALWAYS" />
       <RowConstraints valignment="BOTTOM" vgrow="ALWAYS" />
       <RowConstraints valignment="TOP" />
       <RowConstraints valignment="TOP" />
@@ -22,7 +28,7 @@
    </columnConstraints>
    <children>
       <Label styleClass="header1" stylesheets="@../../style/labels.css" text="Ծառայություններ" GridPane.columnSpan="2147483647" GridPane.halignment="LEFT" GridPane.valignment="BOTTOM" />
-      <ScrollPane fx:id="servicesScrollPane" hbarPolicy="NEVER" maxHeight="300.0" maxWidth="800.0" minHeight="300.0" minViewportHeight="100.0" minWidth="800.0" prefHeight="300.0" prefViewportHeight="200.0" prefWidth="800.0" style="-fx-background-color: transparent;" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" GridPane.vgrow="ALWAYS">
+      <ScrollPane fx:id="employmentsScrollPane" hbarPolicy="NEVER" maxHeight="300.0" maxWidth="800.0" minHeight="300.0" minViewportHeight="100.0" minWidth="800.0" prefHeight="300.0" prefViewportHeight="200.0" prefWidth="800.0" style="-fx-background-color: transparent;" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" GridPane.vgrow="ALWAYS">
          <content>
             <GridPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="800.0" minWidth="800.0" prefWidth="800.0" style="-fx-vgap: 20px;">
                <rowConstraints>
@@ -35,7 +41,7 @@
             <Insets top="10.0" />
          </GridPane.margin>
       </Separator>
-      <GridPane GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
+      <GridPane GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" />
             <ColumnConstraints hgrow="SOMETIMES" />
@@ -67,12 +73,12 @@
             <Insets bottom="5.0" />
          </GridPane.margin>
       </Label>
-      <Label styleClass="paragraph" text="Մեկ ծառայության գին (դրամ)" GridPane.halignment="LEFT" GridPane.rowIndex="5">
+      <Label styleClass="paragraph" text="Մեկ ծառայության գին (դրամ)" GridPane.halignment="LEFT" GridPane.rowIndex="4">
          <GridPane.margin>
             <Insets top="5.0" />
          </GridPane.margin>
       </Label>
-      <TextField fx:id="serviceNameTextField" alignment="CENTER_RIGHT" styleClass="textField" GridPane.columnIndex="2" GridPane.rowIndex="3">
+      <TextField fx:id="employmentNameTextField" alignment="CENTER_RIGHT" styleClass="textField" GridPane.columnIndex="2" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets bottom="5.0" />
          </GridPane.margin>
@@ -80,7 +86,7 @@
             <Font size="17.0" />
          </font>
       </TextField>
-      <TextField fx:id="priceTextField" alignment="CENTER_RIGHT" styleClass="textField" GridPane.columnIndex="2" GridPane.rowIndex="5">
+      <TextField fx:id="priceTextField" alignment="CENTER_RIGHT" styleClass="textField" GridPane.columnIndex="2" GridPane.rowIndex="4">
          <GridPane.margin>
             <Insets bottom="5.0" top="5.0" />
          </GridPane.margin>
@@ -88,8 +94,6 @@
             <Font size="17.0" />
          </font>
       </TextField>
-      <Label styleClass="paragraph" text="Հաստիք" GridPane.halignment="LEFT" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
-      <ComboBox fx:id="positionComboBox" styleClass="combo-box" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
    </children>
    <stylesheets>
       <URL value="@../../style/button.css" />
