--- a/src/main/resources/com/fitness/style/combo_box.css
+++ b/src/main/resources/com/fitness/style/combo_box.css
@@ -1,11 +1,13 @@
 .combo-box{
+    -fx-pref-width: 300px;
+    -fx-min-width: 200px;
+    -fx-max-width: 400px;
+    -fx-padding: 0;
     -fx-border-color: #367bf5;
     -fx-border-radius: 5px;
     -fx-background-color: transparent;
     -fx-border-width:1px;
     -fx-effect: none;
-    -fx-border-insets: 5px;
-    -fx-min-width: 200px;
     -fx-focus-color: transparent;
     -fx-cursor: hand;
     -fx-font-size: 30px;
