--- a/src/main/resources/com/fitness/style/text_field.css
+++ b/src/main/resources/com/fitness/style/text_field.css
@@ -1,4 +1,7 @@
 .textField {
+    -fx-pref-width: 300px;
+    -fx-min-width: 200px;
+    -fx-max-width: 400px;
     -fx-border-width: 1px;
     -fx-border-color: #367bf5;
     -fx-border-radius: 5px;
